listo para celular

--- a/index.html
+++ b/index.html
@@ -5,13 +5,155 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/jpg" href="./img/734f66df-89f7-4439-854e-e56ba324b8cb.jpg"/>
+    <script src="https://kit.fontawesome.com/58eabbaf45.js" crossorigin="anonymous"></script>
     <title>porfolio</title>
 </head>
 
 <body>
-    <header>
-        
-    </header>
+    <section class="inicio">
+        <header>
+            <h1>RE</h1>
+            <button>=
+                <div class="menu">
+                    <ul>
+                        <a href="#Propiedad">propiedades</a>
+                        <a href="#agentes">agentes</a>
+                        <a href="#blog">blog</a>
+                        <a href="#contacto">contactos</a>
+                    </ul>
+                </div>
+            </button>
+        </header>
+        <div class="titulo">
+            <h1>Discover <br> a home for <br> everyone</h1>
+            <input type="text" class="input" placeholder="rent">
+            <input type="text" class="input" placeholder="search">
+        </div>
+        <p>⇩</p>
+    </section>
+    <section class="propiedades" id="Propiedad">
+        <div class="propie-text">
+            <h1>Featured Properties</h1>
+            <p>Explore our latest hot affers</p>
+        </div>
+        <div class="carousel">
+            <div class="elemento"><img src="./img/edificios-1.jpg" alt=""><div class="descripcion"><h2 class="subtitulo">Gorgeous Home</h2> <p class="precio">$2.399</p> <hr class="separador"> <div class="dep"> <p>bd 3</p> <p>ba 1</p></div> </div></div>
+            <div class="elemento"><img src="./img/edificios-2.jpg" alt=""><div class="descripcion"><h2 class="subtitulo">Gorgeous Home</h2> <p class="precio">$1.999</p> <hr class="separador"> <div class="dep"> <p>bd 2</p> <p>ba 1</p></div> </div></div>
+            <div class="elemento"><img src="./img/edificios-3.jpg" alt=""><div class="descripcion"><h2 class="subtitulo">Gorgeous Home</h2> <p class="precio">$2.099</p> <hr class="separador"> <div class="dep"> <p>bd 4</p> <p>ba 1</p></div> </div></div>
+            <div class="elemento"><img src="./img/edificios-4.jpg" alt=""><div class="descripcion"><h2 class="subtitulo">Gorgeous Home</h2> <p class="precio">$1.699</p> <hr class="separador"> <div class="dep"> <p>bd 2</p> <p>ba 1</p></div> </div></div>
+            <div class="elemento"><img src="./img/edificios-5.jpg" alt=""><div class="descripcion"><h2 class="subtitulo">Gorgeous Home</h2> <p class="precio">$2.199</p> <hr class="separador"> <div class="dep"> <p>bd 3</p> <p>ba 1</p></div> </div></div>
+            <div class="elemento"><img src="./img/edificios-6.jpg" alt=""><div class="descripcion"><h2 class="subtitulo">Gorgeous Home</h2> <p class="precio">$2.100</p> <hr class="separador"> <div class="dep"> <p>bd 4</p> <p>ba 2</p></div> </div></div>
+        </div>
+        <div class="ver">
+            <p>Browse all</p>
+            <p class="i">></p>
+        </div>
+    </section>
+    <section class="servicios">
+        <div class="texto-2">
+            <h1>Best Services</h1>
+            <p>We offer perfect real estate services</p>
+        </div>
+        <div class="grid">
+            <div class="bloque"><img src="./img/edificios.png" alt="" class="img"><h1 class="subt-2">Search property</h1><p class="descrip-2">we help you find new home by offering a smart real estate</p><p class="explore">Explore<i class="icono">></i></p></div>
+            <div class="bloque"><img src="./img/ofinista.avif" alt="" class="img"><h1 class="subt-2">Professional Agents</h1><p class="descrip-2">you find a new home by offering a smat real estate experience</p><p class="explore">Explore<i class="icono">></i></p></div>
+            <div class="bloque"><img src="./img/propiedades.png" alt="" class="img"><h1 class="subt-2">Buy & Sell Property</h1><p class="descrip-2">find a new home by offering a smart real estate experience</p><p class="explore">Explore<i class="icono">></i></p></div>
+        </div>
+    </section>
+    <section class="ciudades">
+        <div class="texto-3">
+            <h1>Explore Our Cities</h1>
+            <p>Browse our comprehensive listings</p>
+        </div>
+        <div class="grid-2">
+            <div class="block" style="background-image: url(./img/cuidad-1.webp);"><h1 class="cuidad-n">Buenos Aires</h1><p class="cuidad-p">Argentina</p><button class="prop">316 Propietaries</button></div>
+            <div class="block" style="background-image: url(./img/cuidad-2.webp);"><h1 class="cuidad-n">Barcelona</h1><p class="cuidad-p">Spain</p><button class="prop">249 Propietaries</button></div>
+            <div class="block" style="background-image: url(./img/cuidad-3.jpg);"><h1 class="cuidad-n">New York</h1><p class="cuidad-p">USA</p><button class="prop">102 Propietaries</button></div>
+            <div class="block" style="background-image: url(./img/cuidad-4.jpg);"><h1 class="cuidad-n">London</h1><p class="cuidad-p">Great Britain</p><button class="prop">59 Propietaries</button></div>
+            <div class="block" style="background-image: url(./img/cuidad-5.jpg);"><h1 class="cuidad-n">Tokyo</h1><p class="cuidad-p">Japan</p><button class="prop">187 Propietaries</button></div>
+            <div class="block" style="background-image: url(./img/cuidad-6.jpg);"><h1 class="cuidad-n">Oslo</h1><p class="cuidad-p">Norway</p><button class="prop">123 Propietaries</button></div>
+        </div>
+    </section>
+    <section class="venta">
+        <div class="texto-5">
+            <h1>Want to sell <br> your home?</h1>
+            <p>How much is my home warth? <br> Should you sell your house or buy a <br> new home first?</p>
+        </div>
+        <div class="cont">
+            <img src="./img/fondo-2.jpg" alt="" class="img-2">
+            <button class="buscador">
+                <img src="./img/buscador.png" alt="" class="icon-b">
+                <div class="busca">
+                    <h2>Search</h2>
+                    <p>Smart Finding</p>
+                </div>
+            </button>
+        </div>
+    </section>
+    <section class="agentes" name="agentes">
+        <div class="texto-4">
+            <h1>Featured Agents</h1>
+            <p>Best real estate agents</p>
+        </div>
+        <div class="carousel-2">
+            <div class="elemento-2"><img src="./img/dt-1.jpg" alt=""><div class="descripcion-2"><h2 class="subtitulo">Gustabo Quinteros</h2> <div class="tel"> <p class="num">+987 7654 32 109</p> <p class="gmail">agent1@gmail.com</p></div> </div></div>
+            <div class="elemento-2"><img src="./img/dt-2.jpg" alt=""><div class="descripcion-2"><h2 class="subtitulo">Fabián Nardozza</h2> <div class="tel"> <p class="num">+987 3458 32 938</p> <p class="gmail">agent1@gmail.com</p></div> </div></div>
+            <div class="elemento-2"><img src="./img/dt-3.jpg" alt=""><div class="descripcion-2"><h2 class="subtitulo">Marcelo Gallardo</h2> <div class="tel"> <p class="num">+987 5659 32 119</p> <p class="gmail">agent1@gmail.com</p></div> </div></div>
+            <div class="elemento-2"><img src="./img/dt-4.jpg" alt=""><div class="descripcion-2"><h2 class="subtitulo">Martín Palermo</h2> <div class="tel"> <p class="num">+987 8954 32 109</p> <p class="gmail">agent1@gmail.com</p></div> </div></div>
+            <div class="elemento-2"><img src="./img/dt-5.jpg" alt=""><div class="descripcion-2"><h2 class="subtitulo">Eduardo Domínguez</h2> <div class="tel"> <p class="num">+987 7664 32 349</p> <p class="gmail">agent1@gmail.com</p></div> </div></div>
+            <div class="elemento-2"><img src="./img/dt-6.jpg" alt=""><div class="descripcion-2"><h2 class="subtitulo">Alejandro Orfila</h2> <div class="tel"> <p class="num">+987 4655 32 439</p> <p class="gmail">agent1@gmail.com</p></div> </div></div>
+        </div>
+        <div class="ver-2">
+            <p>Browse all  ></p>
+        </div>
+    </section>
+    <section class="encontrar">
+        <img src="./img/fondo-3.jpg" alt="">
+        <div class="texto-6">
+            <h1>Find a home <br> on mobile</h1>
+            <p>Everiything you need to find a home on mobile</p>
+            <buttom class="descarga">Google Play</buttom>
+            <buttom class="descarga">App Store</buttom>
+        </div>
+    </section>
+    <section class="sesion">
+        <div class="RE">
+            <h1>RE</h1>
+            <p>42 Nine Avenue, 7/3 Floor <br> San Fransisco, CA 1980</p>
+            <i class="redes">f</i>
+            <i class="redes">t</i>
+            <i class="redes">i</i>
+        </div>
+        <div class="Menu-2">
+            <h1>Menu</h1>
+            <div class="lista">
+                <ul class="list">
+                    <li>Home</li>
+                    <li>Services</li>
+                    <li>Features</li>
+                    <li>Pricing</li>
+                    <li>Blog</li>
+                </ul>
+                <ul class="list">
+                    <li>About</li>
+                    <li>Guide</li>
+                    <li>Support</li>
+                    <li>Contact</li>
+                    <li>Agents</li>
+                </ul>
+            </div>
+        </div>
+        <div class="subscribe">
+            <h1>Suscribirse</h1>
+            <p>Get lastest news & update</p>
+            <input type="email" name="" id="" placeholder="Your email">
+            <button class="subs">Suscribe</button>
+        </div>
+    </section>
+    <hr class="divicion">
+    <p class="ultimo">2019 RE ALL rights reserved.</p>
+    <p class="ultimo">Crafted by Laaqiq.</p>
 </body>
 
 </html>
