mejor vista celular

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </button>
         </header>
         <div class="titulo">
-            <h1>Discover <br> a home for <br> everyone</h1>
+            <h1>Discover a home for everyone</h1>
             <input type="text" class="input" placeholder="rent">
             <input type="text" class="input" placeholder="search">
         </div>
